cmake_minimum_required(VERSION 3.15)
project(AlgoInCpp)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

ADD_SUBDIRECTORY(TwoPointers)
ADD_SUBDIRECTORY(DFS)
ADD_SUBDIRECTORY(BFS)
ADD_SUBDIRECTORY(LinkedLists)
ADD_SUBDIRECTORY(Trie)
ADD_SUBDIRECTORY(Graph)
ADD_SUBDIRECTORY(Math)
ADD_SUBDIRECTORY(Tree)
ADD_SUBDIRECTORY(Hash)
ADD_SUBDIRECTORY(BinarySearch)

add_executable(AlgoInCpp main.cpp)
